plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/toNumericIDEA67335.xpath2
ceiling(<error descr="Expected type 'xs:numeric?', got 'xs:boolean'">0 = 1</error>) + floor(<error descr="Expected type 'xs:numeric?', got 'xs:string'">'a'</error>) + round(.)